[package]
name = "aki-gsub"
version = "0.1.38"
authors = ["aki <aki.akaguma@hotmail.com>"]
description = """
substitude text command, replace via regex.
"""
keywords = ["text", "filter"]
categories = ["command-line-utilities", "text-processing"]
license = "MIT OR Apache-2.0"
readme = "README.md"
build = "build.rs"
edition = "2021"
rust-version = "1.65.0"
repository = "https://github.com/aki-akaguma/aki-gsub"

[lib]
name = "libaki_gsub"
path = "src/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "aki-gsub"
path = "src/main.rs"

[features]
default = []
debian_build = []

[dependencies]
anyhow = "1.0"
atty = "0.2"
flood-tide = { version="0.2", default-features=true, features=["stop_at_mm"] }
regex = "1.7"
runnel = "0.4"
memx-cdy = "0.1"

[dev-dependencies]
indoc = "2.0"
assert-text = "0.2"
exec-target = "0.2"

[build-dependencies]
rust-version-info-file = "0.1"

[workspace]
members = [
    "xtask",
]

[package.metadata.deb]
features = ["debian_build"]
section = "AAA-text"
priority = "optional"
maintainer = "aki <aki.akaguma@hotmail.com>"
extended-description = """\
This program is substitude text command, replace via regex.
"""
depends = "$auto"
separate-debug-symbols = true
assets = [
    ["target/release/aki-gsub", "usr/bin/aki-gsub", "755"],
    ["target/rust-version-info.txt", "usr/share/doc/aki-gsub/", "644"],
    ["README.md", "usr/share/doc/aki-gsub/", "644"],
]
